--- a/css/responsive.css
+++ b/css/responsive.css
@@ -25,6 +25,8 @@
     }
 
     .statistics .card p{display: none;}
+    
+    .mix{text-align: center;}
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -72,4 +74,8 @@
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
     .container {max-width: 1000px;}
+    .post-statis .elements,
+    .item-statis .elements{
+        text-align: left;
+    }
 }
